[gd_scene load_steps=2 format=3 uid="uid://dtd8lsj3wvoi3"]

[ext_resource type="Script" path="res://scenes/menus/pause.gd" id="1_uc28u"]

[node name="Pause" type="CanvasLayer"]
layer = 2
script = ExtResource("1_uc28u")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 151
text = "PAUSED"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 350
theme_override_constants/margin_right = 350

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="ContinueButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Continue"

[node name="OptionsButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Options"

[node name="MenuButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Menu"

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
